force-app/main/default/objects/Company__c/Company__c.object-meta.xml
<CustomObject>
    <label>Company</label>
    <nameField>
        <displayFormat>CO-{000000}</displayFormat>
        <label>Company No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>