force-app/main/default/objects/Company__c/fields/Anual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Anual_Revenue__c</fullName>
    <label>Anual Revenue</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>