force-app/main/default/objects/Company__c/fields/extended_html_body__c.field-meta.xml
<CustomField>
    <fullName>extended_html_body__c</fullName>
    <label>extended html body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>